[ Boostrap ] Custimze accordion button

--- a/pricing.html
+++ b/pricing.html
@@ -44,17 +44,17 @@
         </div>
         <div class="banner">
             <div class="row">
-                <p class="fs-48 fs-md-120 fw-bolder align-self-start whitespace-pre-line"> 用多少，
+                <p class="fs-48 fs-md-120 fw-bolder lh-sm align-self-start whitespace-pre-line"> 用多少，
                     付多少。
                 </p>
             </div>
             <div class="row justify-content-end mt-6 mt-md-7">
-                <p class="col-9 col-md-5 fs-28 fs-md-48 fw-bold">
+                <p class="col-9 col-md-5 fs-28 fs-md-48 fw-bold lh-sm">
                     我們相信，最靈活的取用機制，才能最大化的幫助你業務的推動。
                 </p>
             </div>
         </div>
-        <div class="banner-animation d-flex justify-content-end mt-8">
+        <div class="banner-animation d-flex justify-content-start mt-8">
             <img src="./img/deco.png" alt="animation">
             <img src="./img/deco.png" alt="animation">
             <img src="./img/deco.png" alt="animation">
@@ -280,7 +280,91 @@
     </div>
 
     <div class="container">
-        <div class="fqa"></div>
+        <div class="fqa mt-8">
+            <div class="row">
+                <div class="col-lg-4">
+                    <h3 class="fs-2 fw-bold mb-4">常見問題</h3>
+                </div>
+                <div class="col-lg-8">
+                    <div class="accordion" id="faqAccordion">
+                        <div class="accordion-item mb-4">
+                          <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button px-lg-10 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                              如何選擇適合的AI模型？
+                            </button>
+                          </h2>
+                          <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
+                            <div class="accordion-body">
+                              選擇適合的 AI 模型需要考慮您的應用場景、需要解決的問題、可用的資源以及預算等因素。可以通過對比不同模型的性能、準確率、速度等指標，以及與其他用戶的評價與反饋，來選擇最適合的模型。
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item mb-4">
+                          <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed px-lg-10" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                              租用模型的費用是如何計算的？
+                            </button>
+                          </h2>
+                          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
+                            <div class="accordion-body">
+                              租用模型的費用通常會根據模型的性能和使用時間等因素進行計算。具體而言，模型的性能可以根據其精度、速度、佔用資源等指標來評估；而使用時間可以根據租用時間的長短來計算，通常會按小時、天或月來計算。綜合考慮這些因素，系統會自動算出對應的租用費用。
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item mb-4">
+                          <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed px-lg-10" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                              如何進行付款？
+                            </button>
+                          </h2>
+                          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqAccordion">
+                            <div class="accordion-body">
+                              付款方式可以通過網站上提供的線上支付平台進行支付。具體而言，您可以選擇信用卡、銀行轉帳電子錢包等不同的支付方式進行支付。在支付前，您需要先登錄網站並選擇適合的租用方案，系統會自動計算出對應的租用費用和支付金額，然後您可以選擇適合的支付方式進行支付。完成支付後，系統會自動向您提供相應的服務。
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item mb-4">
+                          <h2 class="accordion-header" id="heading4">
+                            <button class="accordion-button collapsed px-lg-10" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapseThree">
+                              租用模型的期限是多久？
+                            </button>
+                          </h2>
+                          <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#faqAccordion">
+                            <div class="accordion-body">
+                              租用模型的期限可以根據您的需求進行設置，通常可以選擇幾個小時、幾天或幾個月等不同的時間段。
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="heading5">
+                            <button class="accordion-button collapsed px-lg-10" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapseThree">
+                              如果在使用的過程中遇到問題，應該怎麼處理？
+                            </button>
+                          </h2>
+                          <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5" data-bs-parent="#faqAccordion">
+                            <div class="accordion-body">
+                              如果在使用過程中遇到問題，您可以聯繫客服或技術支持人員進行諮詢或報告問題。您也可以通過網站上的幫助中心或社區論壇尋找相關的解決方案和回答。
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    <!-- <ul class="question-list">
+                        <li class="question-item">
+                            <div class="collapse-state">
+                                <span class="material-icons add-icon">add</span>
+                                <span class="material-icons remove-icon">remove</span>
+                            </div>
+                            <div class="collapse-content">
+                                <h3>如何選擇適合的 AI 模型？</h3>
+                                <p class="question-answer">
+                                    選擇適合的 AI模型需要考慮您的應用場景、需要解決的問題、可用的資源以及預算等因素。可以通過對比不同模型的性能、準確率、速度等指標，以及與其他用戶的評價與反饋，來選擇最適合的模型。
+                                </p>
+                            </div>
+                        </li>
+                    </ul> -->
+                </div>
+            </div>
+        </div>
         <div class="sitemap border-top border-secondary border-bottom py-7 d-flex justify-content-between flex-wrap">
             <ul class="sitemap-list">
                 <li><a class="link-secondary display-5 display-md-1 fw-bolder mb-2" href="#">首頁</a></li>
@@ -312,6 +396,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="all.js"></script>
 </body>
 </html>
