[ Boostrap ] Fix accordion-button border

--- a/pricing.html
+++ b/pricing.html
@@ -287,10 +287,10 @@
                 </div>
                 <div class="col-lg-8">
                     <div class="accordion" id="faqAccordion">
-                        <div class="accordion-item mb-4">
+                        <div class="accordion-item mb-3">
                           <h2 class="accordion-header" id="headingOne">
                             <button class="accordion-button px-lg-10 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                              如何選擇適合的AI模型？
+                              <p class="fw-bold fs-5">如何選擇適合的AI模型？</p>
                             </button>
                           </h2>
                           <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
@@ -299,10 +299,10 @@
                             </div>
                           </div>
                         </div>
-                        <div class="accordion-item mb-4">
+                        <div class="accordion-item mb-3">
                           <h2 class="accordion-header" id="headingTwo">
                             <button class="accordion-button collapsed px-lg-10" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                              租用模型的費用是如何計算的？
+                                <p class="fw-bold fs-5">租用模型的費用是如何計算的？</p>
                             </button>
                           </h2>
                           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
@@ -311,10 +311,10 @@
                             </div>
                           </div>
                         </div>
-                        <div class="accordion-item mb-4">
+                        <div class="accordion-item mb-3">
                           <h2 class="accordion-header" id="headingThree">
                             <button class="accordion-button collapsed px-lg-10" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                              如何進行付款？
+                                <p class="fw-bold fs-5">如何進行付款？</p>
                             </button>
                           </h2>
                           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqAccordion">
@@ -323,10 +323,10 @@
                             </div>
                           </div>
                         </div>
-                        <div class="accordion-item mb-4">
+                        <div class="accordion-item mb-3">
                           <h2 class="accordion-header" id="heading4">
                             <button class="accordion-button collapsed px-lg-10" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapseThree">
-                              租用模型的期限是多久？
+                              <p class="fw-bold fs-5">租用模型的期限是多久？</p>
                             </button>
                           </h2>
                           <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#faqAccordion">
@@ -338,7 +338,7 @@
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="heading5">
                             <button class="accordion-button collapsed px-lg-10" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapseThree">
-                              如果在使用的過程中遇到問題，應該怎麼處理？
+                              <p class="fw-bold fs-5">如果在使用的過程中遇到問題，應該怎麼處理？</p>
                             </button>
                           </h2>
                           <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5" data-bs-parent="#faqAccordion">
@@ -365,7 +365,7 @@
                 </div>
             </div>
         </div>
-        <div class="sitemap border-top border-secondary border-bottom py-7 d-flex justify-content-between flex-wrap">
+        <div class="sitemap border-top border-secondary border-bottom mt-8 py-7 d-flex justify-content-between flex-wrap">
             <ul class="sitemap-list">
                 <li><a class="link-secondary display-5 display-md-1 fw-bolder mb-2" href="#">首頁</a></li>
                 <li><a class="link-secondary display-5 display-md-1 fw-bolder" href="#">定價</a></li>
