Finish input filed

--- a/pricing.html
+++ b/pricing.html
@@ -135,20 +135,15 @@
         <div class="container">
             <div class="tool text-black">
                 <h1 class="display-3 fw-bolder text-center">這些超酷的應用，都來自 AI工具王</h1>
-                <!-- <input type="search" name="" id=""><img src="" alt="" class="search-icon"></input>
-                <div class="filter-list">
-                    <select name="" id="" class="filter"></select>
-                    <ul class="filter-type">
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                    </ul>
-                    <select name="" id="" class="orderBy"></select>
-                </div> -->
+                <!-- 搜尋欄 -->
+                <div class="search my-4 my-lg-6">
+                  <span class="material-icons text-secondary">search</span>
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="輸入關鍵字搜尋"
+                  />
+                </div>
                 <ul class="tool-list d-flex flex-wrap justify-content-center my-6 gap-3 lh-base">
                     <li class="card overflow-hidden tool-item">
                       <div class="img-container">
@@ -348,20 +343,6 @@
                           </div>
                         </div>
                       </div>
-                    <!-- <ul class="question-list">
-                        <li class="question-item">
-                            <div class="collapse-state">
-                                <span class="material-icons add-icon">add</span>
-                                <span class="material-icons remove-icon">remove</span>
-                            </div>
-                            <div class="collapse-content">
-                                <h3>如何選擇適合的 AI 模型？</h3>
-                                <p class="question-answer">
-                                    選擇適合的 AI模型需要考慮您的應用場景、需要解決的問題、可用的資源以及預算等因素。可以通過對比不同模型的性能、準確率、速度等指標，以及與其他用戶的評價與反饋，來選擇最適合的模型。
-                                </p>
-                            </div>
-                        </li>
-                    </ul> -->
                 </div>
             </div>
         </div>
