--- a/pricing.html
+++ b/pricing.html
@@ -144,6 +144,52 @@
                     placeholder="輸入關鍵字搜尋"
                   />
                 </div>
+                <!-- 分類器 -->
+                <div class="filter">
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown button
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </div>
+                  <ul class="nav">
+                    <li class="nav-item">
+                      <a class="nav-link text-secondary" aria-current="" href="#">全部</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-secondary" href="#">聊天</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-secondary" href="#">影像辨識</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-secondary" href="#">翻譯</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-secondary" href="#">行銷</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-secondary" href="#">客服</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-secondary" href="#">生產力</a>
+                    </li>
+                  </ul>
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown button
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </div>
+                </div>
                 <ul class="tool-list d-flex flex-wrap justify-content-center my-6 gap-3 lh-base">
                     <li class="card overflow-hidden tool-item">
                       <div class="img-container">
