--- a/pricing.html
+++ b/pricing.html
@@ -145,47 +145,57 @@
                   />
                 </div>
                 <!-- 分類器 -->
-                <div class="filter d-flex justify-content-between">
+                <div class="filter d-flex justify-content-between align-items-center">
                   <div class="dropdown">
                     <button class="btn btn-secondary btn-search-bar btn-filter" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       篩選
+                      <span class="material-icons ms-2">filter_alt</span>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><h6 class="dropdown-header fw-bold">AI 模型</h6></li>
+                      <li><a class="dropdown-item filter-active" href="#">所有模型</a></li>
+                      <li><a class="dropdown-item" href="#">gpt3.5</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><h6 class="dropdown-header fw-bold">類型</h6></li>
+                      <li><a class="dropdown-item" href="#">所有類型</a></li>
+                      <li><a class="dropdown-item" href="#">問答服務</a></li>
+                      <li><a class="dropdown-item" href="#">虛擬客服</a></li>
+                      <li><a class="dropdown-item" href="#">生活應用</a></li>
+                      <li><a class="dropdown-item" href="#">程式知識</a></li>
+                      <li><a class="dropdown-item" href="#">翻譯助手</a></li>
+                      <li><a class="dropdown-item" href="#">行銷文案</a></li>
                     </ul>
                   </div>
-                  <ul class="nav">
+                  <ul class="nav gap-1">
                     <li class="nav-item">
-                      <a class="nav-link text-secondary" aria-current="" href="#">全部</a>
+                      <a class="nav-link filter-type-active" aria-current="" href="#">全部</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-secondary" href="#">聊天</a>
+                      <a class="nav-link text-secondary" href="#">問答服務</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-secondary" href="#">影像辨識</a>
+                      <a class="nav-link text-secondary" href="#">虛擬客服</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-secondary" href="#">翻譯</a>
+                      <a class="nav-link text-secondary" href="#">生活應用</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-secondary" href="#">行銷</a>
+                      <a class="nav-link text-secondary" href="#">程式知識</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-secondary" href="#">客服</a>
+                      <a class="nav-link text-secondary" href="#">翻譯助手</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-secondary" href="#">生產力</a>
+                      <a class="nav-link text-secondary" href="#">行銷文案</a>
                     </li>
                   </ul>
                   <div class="dropdown">
                     <button class="btn btn-secondary btn-search-bar btn-orderBy" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
                       <span class="dropdown-btnText">由新到舊</span>
-                      <span class="material-icons fs-normal ml-12">expand_more</span>
+                      <span class="material-icons ms-2">expand_more</span>
                     </button>
                     <ul class="dropdown-menu filter-menu" aria-labelledby="dropdownMenuButton2">
-                      <li><a data-sort= "new-to-old" class="dropdown-item" href="">由新到舊</a></li>
+                      <li><a data-sort= "new-to-old" class="dropdown-item filter-active" href="">由新到舊</a></li>
                       <li><a data-sort= "old-to-new" class="dropdown-item" href="">由舊到新</a></li>
                     </ul>
                   </div>
