Finish tool-list filter

--- a/pricing.html
+++ b/pricing.html
@@ -145,7 +145,7 @@
                   />
                 </div>
                 <!-- 分類器 -->
-                <div class="filter d-flex justify-content-between align-items-center">
+                <div class="filter d-flex justify-content-between align-items-center flex-wrap">
                   <div class="dropdown">
                     <button class="btn btn-secondary btn-search-bar btn-filter" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       篩選
@@ -166,7 +166,7 @@
                       <li><a class="dropdown-item" href="#">行銷文案</a></li>
                     </ul>
                   </div>
-                  <ul class="nav gap-1">
+                  <ul class="nav filter-list order-last order-lg-0 gap-1">
                     <li class="nav-item">
                       <a class="nav-link filter-type-active" aria-current="" href="#">全部</a>
                     </li>
