--- a/home.html
+++ b/home.html
@@ -41,9 +41,18 @@
             <a class="btn btn-outline-light fw-bold fs-5 px-4 py-3 my-5" href="#">開始使用</a>
         </div>
         <div class="banner-animation d-flex justify-content-end mt-8">
-          <img class="grass-icon" src="./img/deco.png" alt="grass">
-          <img class="grass-icon" src="./img/deco.png" alt="grass">
-          <img class="grass-icon" src="./img/deco.png" alt="grass">
+          <li>
+            <img class="grass-icon grass-1" src="./img/deco.png" alt="grass">
+          </li>
+          <li>
+            <img class="grass-icon grass-2" src="./img/deco.png" alt="grass">
+          </li>
+          <li>
+            <img class="grass-icon grass-3" src="./img/deco.png" alt="grass">
+          </li>
+            <!-- <img class="grass-icon grass-1" src="./img/deco.png" alt="grass">
+            <img class="grass-icon grass-2" src="./img/deco.png" alt="grass">
+            <img class="grass-icon grass-3" src="./img/deco.png" alt="grass"> -->
         </div>
         <div class="service mt-8">
             <div class="row">
