--- a/pricing.html
+++ b/pricing.html
@@ -43,7 +43,7 @@
                 </p>
             </div>
         </div>
-        <div class="banner-animation d-flex justify-content-end mt-8">
+        <div class="banner-animation d-flex justify-content-start mt-8">
           <img class="grass-icon" src="./img/deco.png" alt="grass">
           <img class="grass-icon" src="./img/deco.png" alt="grass">
           <img class="grass-icon" src="./img/deco.png" alt="grass">
