--- a/pricing.html
+++ b/pricing.html
@@ -14,7 +14,7 @@
         <div class="header border-bottom border-light py-3 mb-3">
             <nav class="navbar navbar-expand-md">
                 <div class="logo">
-                    <h1><a href="./home.html"><img src="../img/logo.png" alt="AI工具王"></a></h1>
+                    <h1><a href="./home.html"><img src="./img/logo.png" alt="AI工具王"></a></h1>
                 </div>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#Navbarshow" >
                     <span class="navbar-toggler-icon material-icons text-white">menu</span>
@@ -399,7 +399,7 @@
             </ul>
             <div class="logo">
                 <div class="logo">
-                    <h1><a href="./home.html"><img src="../img/logo.png" alt="AI工具王"></a></h1>
+                    <h1><a href="./home.html"><img src="./img/logo.png" alt="AI工具王"></a></h1>
                 </div>
             </div>
         </div>
