Fix grass li level

--- a/pricing.html
+++ b/pricing.html
@@ -44,9 +44,15 @@
             </div>
         </div>
         <div class="banner-animation d-flex justify-content-start mt-8">
-          <img class="grass-icon" src="./img/deco.png" alt="grass">
-          <img class="grass-icon" src="./img/deco.png" alt="grass">
-          <img class="grass-icon" src="./img/deco.png" alt="grass">
+          <li>
+            <img class="grass-icon grass-1" src="./img/deco.png" alt="grass">
+          </li>
+          <li>
+            <img class="grass-icon grass-2" src="./img/deco.png" alt="grass">
+          </li>
+          <li>
+            <img class="grass-icon grass-3" src="./img/deco.png" alt="grass">
+          </li>
         </div>
         <div class="price mt-8">
             <h3 class="fs-2 fw-bold mb-4">定價</h3>
